--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-prueba automática
+-----BEGIN PGP MESSAGE-----
+
+jA0EBwMCwLF9wNI3N2fm0kcBAFnQdU30TAT0ZFYqspg32Jtj/zY6BtSQGD01VxS0
++svxBbYErqlfc3VgGzvAfQOgThmuPw8+y8Mf2hOaQ33cYxfxl8Mlyg==
+=tyxV
+-----END PGP MESSAGE-----
