--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-192.168.43.106
+-----BEGIN PGP MESSAGE-----
+
+jA0EBwMCrh/MyMJRmqzk0kYBVaGpThNUrj9JRtzZhhQDCllVkumTmtrORY5hUWqE
+yRME5LwQQ/mcTy6DtfspqQW13i59Swlv/oThky+QnSbs3R0II5rB
+=0Vwp
+-----END PGP MESSAGE-----
